--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "TOKEN": "",
+  "TOKEN": "ODAyOTk1MzUzMjA5MDEyMjM0.YA3Vsw.N0hVsjRqb-TbDRLsrImqudPgTSo",
   "PREFIX": "R",
   "approveemoji": "769665713124016128",
   "denyemoji": "770326304473350145",
