--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-  "TOKEN": ".YA3Vsw.N0hVsjRqb-TbDRLsrImqudPgTSo",
-  "PREFIX": "R",
+  "TOKEN": "Nzk0Mjg4NjM0NjU5OTk1NjU5.X-4o7w.IUStMnk-zHHe_W2Tz47fNE5920A",
+  "PREFIX": "m",
   "approveemoji": "769665713124016128",
   "denyemoji": "770326304473350145",
   "erroremoji": "768460113622859788"
