--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "TOKEN": "Nzk0Mjg4NjM0NjU5OTk1NjU5.X-4o7w.7YvOV5CNdnSosfCR3l1wyDiLSWE",
+  "TOKEN": "ODAyOTk1MzUzMjA5MDEyMjM0.YA3Vsw.Srgstmmb37EzdFBhhiLFHBj3wU8",
   "PREFIX": "m",
   "approveemoji": "769665713124016128",
   "denyemoji": "770326304473350145",
