--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "TOKEN": "ODAyOTk1MzUzMjA5MDEyMjM0.YA3Vsw.Srgstmmb37EzdFBhhiLFHBj3wU8",
-  "PREFIX": ".",
+  "PREFIX": "?",
   "approveemoji": "769665713124016128",
   "denyemoji": "770326304473350145",
   "erroremoji": "768460113622859788"
